[update] fix bug of content overflow in post page

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -110,7 +110,6 @@
             -ms-word-break: break-all;
             word-break: break-all;
             /* Non standard for webkit */
-            word-break: break-word;
             -webkit-hyphens: auto;
             -moz-hyphens: auto;
             -ms-hyphens: auto;
